Update injected.scss - Fix flickering of new icon

--- a/src/css/injected.scss
+++ b/src/css/injected.scss
@@ -370,7 +370,7 @@ ul.magicDelete > li.deleting {
   margin-top: -2px;
 }
 #menu li {
-  transition: color 0.2s, background 0.2s;
+  transition: color 0.01s, background 0.01s;
 }
 #menu section > label {
   align-items: center;
